# todo-or-else

./: .flake8  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
tests/: __init__.py  test_todo_or_else.py
todo_or_else/: __init__.py
